; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_key_call.c_key_call_destroy.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtirpc/src/extr_key_call.c_key_call_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_call_private = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @key_call_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @key_call_destroy(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.key_call_private*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.key_call_private*
  store %struct.key_call_private* %5, %struct.key_call_private** %3, align 8
  %6 = load %struct.key_call_private*, %struct.key_call_private** %3, align 8
  %7 = icmp ne %struct.key_call_private* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %1
  %9 = load %struct.key_call_private*, %struct.key_call_private** %3, align 8
  %10 = getelementptr inbounds %struct.key_call_private, %struct.key_call_private* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %8
  %14 = load %struct.key_call_private*, %struct.key_call_private** %3, align 8
  %15 = getelementptr inbounds %struct.key_call_private, %struct.key_call_private* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @clnt_destroy(i64 %16)
  br label %18

18:                                               ; preds = %13, %8
  %19 = load %struct.key_call_private*, %struct.key_call_private** %3, align 8
  %20 = call i32 @free(%struct.key_call_private* %19)
  br label %21

21:                                               ; preds = %18, %1
  ret void
}

declare dso_local i32 @clnt_destroy(i64) #1

declare dso_local i32 @free(%struct.key_call_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
